fix label overflow

--- a/app/components/work_packages/activities_tab/journals/new_component.sass
+++ b/app/components/work_packages/activities_tab/journals/new_component.sass
@@ -1,7 +1,10 @@
 .work-packages-activities-tab-journals-new-component
     &--input-trigger-column
+        min-width: 0
+        overflow: hidden
         width: 100%
         button
+            min-width: 0
             background: var(--bgColor-default)
             cursor: text
             .Button-content
